--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -4,7 +4,6 @@
 
   &__content {
     display: flex;
-    height: calc(100vh - 60px);
     overflow: auto;
 
     & > aside {
@@ -13,11 +12,11 @@
       width: 35%;
 
       & > * {
-        height: 100%;
+        // height: 100%;
 
         .CodeMirror {
           background: transparent;
-          height: 100%;
+          height: calc(100vh - 60px);
 
           pre {
             font-size: rem(15);
@@ -29,6 +28,8 @@
 
     & > main {
       flex: 1;
+      height: 100vh;
+      overflow: auto;
       padding: rem(24);
     }
   }
