Login page and logic

--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -14,3 +14,6 @@
 // Component styles
 @import '../components/Header/Header';
 @import '../components/Editor/Editor';
+
+// Page styles
+@import '../pages/Login/Login';
