--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -10,6 +10,7 @@
 @import './card';
 @import './drawer';
 @import './overlay';
+@import './statistic';
 
 // Component styles
 @import '../components/Header/Header';
