--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -1,5 +1,5 @@
-@import '../../../node_modules/@atomikui/core/dist/styles/main.min.css';
-@import '../../../node_modules/@atomikui/core-sass/abstracts/main.scss';
+@import '../../../node_modules/@atomikui/core/dist/styles/main.min';
+@import '../../../node_modules/@atomikui/core-sass/abstracts/main';
 
 // Base styles
 @import './base';
