Adds localbase to handle IndexedDB

--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -1,4 +1,4 @@
-@import '../../../node_modules/@atomikui/core/dist/styles/main.min';
+@import '../../../node_modules/@atomikui/core/dist/styles/main.min.css';
 @import '../../../node_modules/@atomikui/core-sass/abstracts/main';
 
 // Base styles
