Updates card header font size

--- a/src/client/styles/card.scss
+++ b/src/client/styles/card.scss
@@ -1,5 +1,6 @@
 .atomikui-card__header {
   border-bottom: rem(1) solid $blue-gray-600;
+  font-size: rem(18);
   padding-bottom: rem(8);
   text-transform: uppercase;
 }
