Overrides Button small variant

--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -5,8 +5,9 @@
 @import './base';
 @import './layout';
 
-// Atomik UI style overrides
+// Style overrides
 @import './codemirror';
+@import './Button';
 @import './card';
 @import './drawer';
 @import './overlay';
