--- a/src/client/components/Editor/Editor.scss
+++ b/src/client/components/Editor/Editor.scss
@@ -7,6 +7,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    text-transform: uppercase;
+    text-transform: capitalize;
   }
 }
