Updates card styles

--- a/src/client/styles/card.scss
+++ b/src/client/styles/card.scss
@@ -1,3 +1,8 @@
+.atomikui-card {
+  position: relative;
+  overflow: hidden;
+}
+
 .atomikui-card__header {
   border-bottom: rem(1) solid $blue-gray-600;
   font-size: rem(18);
