--- a/src/client/styles/card.scss
+++ b/src/client/styles/card.scss
@@ -3,6 +3,10 @@
   overflow: hidden;
 }
 
+.atomikui-card__body {
+  padding: 0;
+}
+
 .atomikui-card__header {
   border-bottom: rem(1) solid $blue-gray-600;
   font-size: rem(18);
