--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -16,6 +16,7 @@
 // Component styles
 @import '../components/Header/Header';
 @import '../components/Editor/Editor';
+@import '../components/ExpenseGroupDetail/ExpenseGroupDetail';
 
 // Page styles
 @import '../pages/Login/Login';
