--- a/src/client/components/Header/Header.scss
+++ b/src/client/components/Header/Header.scss
@@ -1,6 +1,6 @@
 .main-header {
   align-items: center;
-  background: darken($blue-gray-900, 5%);
+  background: lighten($darkGray, 5%);
   display: flex;
   height: rem(50);
   justify-content: space-between;
