--- a/src/client/styles/codemirror.scss
+++ b/src/client/styles/codemirror.scss
@@ -1,5 +1,5 @@
 .CodeMirror.cm-s-monokai {
-  background: darken($blue-gray-900, 3%);
+  background: lighten($darkGray, 5%);
   height: calc(100vh - 50px);
   overflow: auto;
 
