--- a/src/client/components/ExpenseGroupDetail/ExpenseGroupDetail.scss
+++ b/src/client/components/ExpenseGroupDetail/ExpenseGroupDetail.scss
@@ -1,5 +1,5 @@
 .expense-group-summary {
-  background: #2d3b42;
+  background: $darkGray;
   border-left: 1px solid #465963;
   min-width: rem(200);
   padding: rem(24);
@@ -7,7 +7,7 @@
 
   hr {
     border: 0;
-    border-top: 1px solid rgba(255, 255, 255, 0.35);
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
     height: rem(1);
     margin: rem(16 0 30);
   }
