--- a/src/client/pages/Login/Login.scss
+++ b/src/client/pages/Login/Login.scss
@@ -16,11 +16,11 @@
 
     input {
       background: darken($blue-gray-900, 7%);
-      border: rem(1) solid $blue-gray-700;
       color: $white;
       text-align: center;
-      width: rem(35);
       transition: all 0.3s linear;
+      width: rem(200);
+      margin-top: rem(3);
     }
   }
 }
