--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -22,4 +22,4 @@
 @import '../components/ExpenseGroupDetail/ExpenseGroupDetail';
 
 // Page styles
-@import '../pages/Login/Login';
+@import '../routes/Login/Login';
